sdks/novus-mundus-ts/tests/results/09-hero-levelup.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/09-hero.test.ts:

[1m[34m━━━ Hero System ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Waiting for RPC... (1.8s)
[validator] Ready in 2.0s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.3s.
(skip) Hero System > Hero Minting > should mint a new hero
(skip) Hero System > Hero Minting > should reject minting without enough resources
(skip) Hero System > Hero Minting > should reject minting non-existent template
(skip) Hero System > Hero Minting > should mint multiple heroes from same template
[PlayerFactory] Initializing player 0 (city 0)
[2m[onchain][0m [2m2tG3zqEJeF..[0m [36m⚡ UserCreated[0m [2muser=2GzaZXQS.. wallet=G9Qrv1ad.. timestamp=1770019753[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=8368TZj8.. owner=G9Qrv1ad.. joinedAt=1770019753[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35minit user[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35minit player[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m2tG3zqEJeF..[0m [33mTotal 6,438 / 526,293 CU[0m
[2m[onchain][0m [2m2C42udZ8Lt..[0m [36m⚡ EstateCreated[0m [2mestate=2zEozDGn.. player=8368TZj8.. playerName=Player #1 timestamp=1770019753[0m
[2m[onchain][0m [2m2C42udZ8Lt..[0m [36m⚡ ItemPurchased[0m [2mplayer=8368TZj8.. playerName=Player #1 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770019753[0m
[2m[onchain][0m [2m2C42udZ8Lt..[0m [35mcreate estate[0m
[2m[onchain][0m [2m2C42udZ8Lt..[0m [35mpurchase item[0m
[2m[onchain][0m [2m2C42udZ8Lt..[0m [33mTotal 12,566 / 396,001 CU[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 plot=0 completesAt=1770034154 timestamp=1770019754[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 level=1 plot=0 timestamp=1770019754[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [35mcomplete building[0m
[2m[onchain][0m [2mzf5LdUZc4W..[0m [33mTotal 1,072 / 321,543 CU[0m
[buildAndCompleteBuilding] Building 9 needs split build...
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770062956 timestamp=1770019756[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [35mcomplete building[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [33mTotal 564 / 321,525 CU[0m
[2m[onchain][0m [2m57Z3ZiYYNG..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770062956 timestamp=1770019756[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4N6ibrt4DH..[0m [33mTotal 10,204 / 331,729 CU[0m
[2m[onchain][0m [2m2M5q1dT763..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 level=1 plot=1 timestamp=1770019757[0m
[2m[onchain][0m [2m2M5q1dT763..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2M5q1dT763..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2M5q1dT763..[0m [33mTotal 1,115 / 289,662 CU[0m
[buildAndCompleteBuilding] Building 0 already exists, continuing
[2m[onchain][0m [2m4nsGvf5DA8..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4nsGvf5DA8..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4nsGvf5DA8..[0m [33mTotal 360 / 399,850 CU[0m
[2m[onchain][0m [2m4nsGvf5DA8..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1a[0m
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m4zRWQmcV5J..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770062968 timestamp=1770019768[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2m4zRWQmcV5J..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770062968 timestamp=1770019768[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mcHXjrTSEbs..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2mD4pppe9PAm..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 level=1 plot=2 timestamp=1770019769[0m
[2m[onchain][0m [2mD4pppe9PAm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mD4pppe9PAm..[0m [35mcomplete building[0m
[2m[onchain][0m [2mD4pppe9PAm..[0m [33mTotal 1,179 / 289,657 CU[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 plot=3 completesAt=1770034171 timestamp=1770019771[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 level=1 plot=3 timestamp=1770019771[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2TZyZK5DEW..[0m [33mTotal 1,234 / 321,439 CU[0m
[2m[onchain][0m [2mP1BvNB3TKW..[0m [36m⚡ TeamCreated[0m [2mteam=9oDER9UG.. teamName=HTeam773694 founder=8368TZj8.. noviBurned=50000 timestamp=1770019773[0m
[2m[onchain][0m [2mP1BvNB3TKW..[0m [35mcreate team[0m
[2m[onchain][0m [2mP1BvNB3TKW..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mP1BvNB3TKW..[0m [33mTotal 28,708 / 200,000 CU[0m
[32m  ✓ tx [2mP1BvNB3TKWDh..[0m[0m
[2m[onchain][0m [2m31zDk2qqxP..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=0 baseQuantity=106 finalQuantity=134 noviBurned=500 timeBonusBps=2641 timestamp=1770019773[0m
[2m[onchain][0m [2m31zDk2qqxP..[0m [35mhire units[0m
[2m[onchain][0m [2m31zDk2qqxP..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m31zDk2qqxP..[0m [33mTotal 23,231 / 200,000 CU[0m
[32m  ✓ tx [2mTNRSmtAdqKAA..[0m[0m
[2m[onchain][0m [2mTNRSmtAdqK..[0m [36m⚡ RallyCreated[0m [2mrally=EXaQzERk.. team=9oDER9UG.. teamName=HTeam773694 leader=8368TZj8.. target=2jhtBmQU.. gatherAt=1770023374 timestamp=1770019774[0m
[2m[onchain][0m [2mTNRSmtAdqK..[0m [35mcreate rally[0m
[2m[onchain][0m [2mTNRSmtAdqK..[0m [33mTotal 28,804 / 200,000 CU[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [36m⚡ HeroMinted[0m [2mheroMint=7vMnEQFU.. heroName=Warrior player=8368TZj8.. playerName=Player #1 templateId=1 rarity=0 timestamp=1770019774[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [35mmint hero[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [35mInstruction: Create[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [35mprograms/mpl-core/src/state/collection.rs:139:Approve[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [35mInstruction: AddPlugin[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [35mprograms/mpl-core/src/state/collection.rs:160:Approve[0m
[2m[onchain][0m [2mZ9NPtyfgqC..[0m [33mTotal 43,368 / 200,000 CU[0m
[32m  ✓ tx [2mZ9NPtyfgqC8B..[0m[0m
[32m  ✓ tx [2m7YUzdPo9BYVM..[0m[0m
[2m[onchain][0m [2m7YUzdPo9BY..[0m [36m⚡ HeroLocked[0m [2mheroMint=7vMnEQFU.. heroName=Warrior player=8368TZj8.. playerName=Player #1 slot=0 timestamp=1770019775[0m
[2m[onchain][0m [2m7YUzdPo9BY..[0m [35mlock hero[0m
[2m[onchain][0m [2m7YUzdPo9BY..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m7YUzdPo9BY..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m7YUzdPo9BY..[0m [33mTotal 13,586 / 200,000 CU[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [35munlock hero[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [35mInstruction: UpdatePlugin[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [35mNeither the asset or any plugins have approved this operation[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [31mProgram CoREENxT6tW1HoK8ypY1SxRMZTcVPm7R94rH4PZNhX7d failed: custom program error: 0x1a[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [33mTotal 37,517 / 200,000 CU[0m
[2m[onchain][0m [2m5hEm7277rL..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1a[0m
[31m  ✗ tx[0m
[31m    Transaction 5hEm7277rLn1yADdDAWWpEJ2DuATedgQF3r4KaBDgEkXrNeqYjqhcwX7jmkKN3F712eWsgksg4iLfxrWk8N6uvty resulted in an error. [0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 5hEm7277rLn1yADdDAWWpEJ2DuATedgQF3r4KaBDgEkXrNeqYjqhcwX7jmkKN3F712eWsgksg4iLfxrWk8N6uvty resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":26}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "5hEm7277rLn1yADdDAWWpEJ2DuATedgQF3r4KaBDgEkXrNeqYjqhcwX7jmkKN3F712eWsgksg4iLfxrWk8N6uvty",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":26}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Hero System > Hero Level Up > should level up hero with fragments [23132.85ms]
(skip) Hero System > Hero Level Up > should reject level up without enough fragments
(skip) Hero System > Hero Level Up > should reject level up at max level
(skip) Hero System > Hero Level Up > should increase stats on level up
(skip) Hero System > Hero Lock/Unlock > should lock hero for expedition
(skip) Hero System > Hero Lock/Unlock > should unlock hero after expedition
(skip) Hero System > Hero Lock/Unlock > should lock and unlock without expedition
(skip) Hero System > Hero Lock/Unlock > should reject lock on occupied slot
(skip) Hero System > Hero Assignment > should assign hero for defense
(skip) Hero System > Hero Assignment > should remove defensive assignment
(skip) Hero System > Hero Assignment > should reject assigning empty slot
(skip) Hero System > Hero Stats > should have correct base stats from template
(skip) Hero System > Hero Stats > should apply hero bonuses when locked
(skip) Hero System > Hero Stats > should have specialization bonuses
(skip) Hero System > Hero Equipment > should lock hero for equipment readiness
(skip) Hero System > Hero Equipment > should unlock hero after removing equipment
(skip) Hero System > Hero Equipment > should reject equipping to non-locked hero slot
(skip) Hero System > Hero Collection > should reject duplicate collection creation
(skip) Hero System > Hero Collection > should reject collection creation by non-DAO
(skip) Hero System > Hero Experience > should gain XP from locking hero
(skip) Hero System > Hero Experience > should gain XP from expeditions
(skip) Hero System > Hero Experience > should calculate XP to next level
(skip) Hero System > Hero Rarity > should mint heroes with rarity from template
(skip) Hero System > Hero Rarity > should apply rarity stat multipliers when locked
(skip) Hero System > Hero Trading > should mint hero to wallet
(skip) Hero System > Hero Trading > should reject unlock with wrong slot
(skip) Hero System > Hero Trading > should verify locked hero is owned by PDA

 0 pass
 30 skip
 1 fail
Ran 31 tests across 1 files. [28.56s]
